--- a/results-summary-component-main/index.html
+++ b/results-summary-component-main/index.html
@@ -30,53 +30,53 @@
 
 	<body>
 		<div class="container">
-			<div class="result">
+			<div class="result__score-container">
 				<!-- result__score-container-->
-				<h2 class="result__tittle">Your Result</h2>
+				<h2 class="result__score-container__tittle">Your Result</h2>
 				<!-- result__score-container__title -->
 				<div class="result__circle">
 					<!-- result__score-container__title -->
 					<span class="result__circle--big">76</span><br />
 					<span class="result__circle--minus">of 100</span>
 				</div>
-				<h1 class="result__h1">Great</h1>
+				<h1 class="result__score-container__result-title">Great</h1>
 				<!-- result__score-container__result-title -->
-				<p class="result__para">
+				<p class="result__score-container__message">
 					You scored higher than 65% of the people who have taken these tests.
 				</p>
 				<!-- result__score-container__message -->
 			</div>
-			<div class="result result__white">
+			<div class="result__summary">
 				<!-- result__summary -->
-				<h2 class="result__tittle--white">Summary</h2>
+				<h2 class="result__summary__title">Summary</h2>
 				<!-- result__summary__title-->
-				<div class="result__information">
+				<div class="result__summary__item-information red">
 					<!-- result__summary__item-information -->
-					<div class="result__details">
+					<div class="result__summary__item-information__details">
 						<!-- result__summary__item-information__details -->
 						<img src="./assets/images/icon-reaction.svg" alt="" />
 						<p class="result--red">Reaction</p>
 					</div>
 					<p>80 <span class="result--percentage"> /100</span></p>
 				</div>
-				<div class="result__information">
+				<div class="result__summary__item-information orange">
 					<!-- result__summary__item-information -->
-					<div class="result__details">
+					<div class="result__summary__item-information__details">
 						<!-- result__summary__item-information__details -->
 						<img src="./assets/images/icon-memory.svg" alt="" />
 						<p class="result--orange">Memory</p>
 					</div>
 					<p>92 <span class="result--percentage"> /100</span></p>
 				</div>
-				<div class="result__information">
-					<div class="result__details">
+				<div class="result__summary__item-information green">
+					<div class="result__summary__item-information__details">
 						<img src="./assets/images/icon-verbal.svg" alt="" />
 						<p class="result--green">Verbal</p>
 					</div>
 					<p>61 <span class="result--percentage"> /100</span></p>
 				</div>
-				<div class="result__information">
-					<div class="result__details">
+				<div class="result__summary__item-information blue">
+					<div class="result__summary__item-information__details">
 						<img src="./assets/images/icon-visual.svg" alt="" />
 						<p class="result--blue">Visual</p>
 					</div>
